# craken-slack

./: .gitignore  .mcp.json  .pre-commit-config.yaml  README.ko.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
src/slack_mcp/: __init__.py  __main__.py  cache.py  capabilities.py  client.py  config.py  errors.py  files.py  server.py  tools.py
src/slack_mcp/schema/: __init__.py  auth.py  base.py  channel.py  file.py  message.py  search.py  user.py  usergroup.py
tests/: conftest.py  support.py
tests/slack_mcp/: test_cache.py  test_capabilities.py  test_client.py  test_config.py  test_errors.py  test_files.py  test_schema.py  test_server.py  test_tools.py
